--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -27,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout code
@@ -108,8 +109,36 @@ jobs:
           cat package.json | jq ".version = \"$NEW_VERSION\"" > package.json.new
           mv package.json.new package.json
 
-      - name: Commit and Push Version Bump
+      - name: Create Branch for Version Bump
+        id: create-branch
         run: |
+          # Create a new branch for the version bump
+          BRANCH_NAME="version-bump-${{ steps.bump-version.outputs.version }}"
+          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
+          git checkout -b $BRANCH_NAME
           git add package.json
           git commit -m "chore: bump version to ${{ steps.bump-version.outputs.version }}"
-          git push
+          git push --set-upstream origin $BRANCH_NAME
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'chore: bump version to ${{ steps.bump-version.outputs.version }}'
+          title: 'Version Bump: ${{ steps.bump-version.outputs.version }}'
+          body: |
+            ## Automated Version Bump
+
+            This PR was created automatically by the Auto Version Bump workflow.
+
+            - New version: **v${{ steps.bump-version.outputs.version }}**
+            - Bump type: **${{ github.event.inputs.version-type || steps.version-type.outputs.type }}**
+
+            After merging this PR, a new GitHub release will be created automatically.
+          branch: ${{ steps.create-branch.outputs.branch_name }}
+          base: ${{ github.event.repository.default_branch }}
+          labels: |
+            automated-pr
+            version-bump
+          delete-branch: true
