--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -113,7 +113,12 @@ jobs:
         id: create-branch
         run: |
           # Create a new branch for the version bump
-          BRANCH_NAME="version-bump-${{ steps.bump-version.outputs.version }}"
+          # Generate a timestamp-based ID for the middle segment that matches the pattern [A-Za-z]+-[0-9]+
+          TIMESTAMP=$(date +%s)
+          ISSUE_ID="VER-${TIMESTAMP}"
+
+          # Use format that matches branch naming rules: chore/VER-timestamp/version-bump
+          BRANCH_NAME="chore/${ISSUE_ID}/version-bump-${{ steps.bump-version.outputs.version }}"
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
           git checkout -b $BRANCH_NAME
