--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      pull-requests: write
+      issues: write
 
     steps:
       - name: Checkout code
@@ -129,29 +129,49 @@ jobs:
           # Push without force
           git push origin $BRANCH_NAME
 
-      - name: Create Pull Request
-        id: create-pr
+      - name: Create Issue for Manual PR Creation
+        id: create-issue
         run: |
-          # Use GitHub CLI to create the PR
-          pr_url=$(gh pr create \
-            --title "Release v${{ steps.bump-version.outputs.version }}" \
-            --body "## Version Release
+          # Create issue content
+          TITLE="Version Bump: v${{ steps.bump-version.outputs.version }} - Create PR"
+          BODY="## Version Bump Ready
 
-          This PR was created automatically by the Auto Version Bump workflow.
+          The auto-version workflow has created a new branch with version bump changes.
 
-          - New version: **v${{ steps.bump-version.outputs.version }}**
-          - Bump type: **${{ github.event.inputs.version-type || steps.version-type.outputs.type }}**
+          ### Details:
+          - **New version**: v${{ steps.bump-version.outputs.version }}
+          - **Bump type**: ${{ github.event.inputs.version-type || steps.version-type.outputs.type }}
+          - **Branch name**: \`${{ steps.create-branch.outputs.branch_name }}\`
 
-          After merging this PR, a new GitHub release will be created automatically." \
-            --base "${{ github.event.repository.default_branch }}" \
-            --head "${{ steps.create-branch.outputs.branch_name }}")
+          ### Next steps:
+          Please create a pull request from this branch to merge these changes into the main branch.
 
-          echo "pr_url=$pr_url" >> $GITHUB_OUTPUT
-          echo "Created PR: $pr_url"
+          You can [create the PR here](https://github.com/${{ github.repository }}/compare/${{ github.event.repository.default_branch }}...${{ steps.create-branch.outputs.branch_name }}?quick_pull=1&title=Release%20v${{ steps.bump-version.outputs.version }})
 
-          # Try to add labels if they exist (won't fail if they don't)
-          gh pr edit "$pr_url" --add-label "automated-pr" || echo "Label 'automated-pr' not found, skipping"
-          gh pr edit "$pr_url" --add-label "version-bump" || echo "Label 'version-bump' not found, skipping"
-          gh pr edit "$pr_url" --add-label "release" || echo "Label 'release' not found, skipping"
+          Suggested PR settings:
+          - **Title**: Release v${{ steps.bump-version.outputs.version }}
+          - **Body**:
+          \`\`\`
+          ## Version Release
+
+          This PR was created from the auto-versioning workflow.
+
+          - New version: v${{ steps.bump-version.outputs.version }}
+          - Bump type: ${{ github.event.inputs.version-type || steps.version-type.outputs.type }}
+
+          After merging this PR, a new GitHub release will be created automatically.
+          \`\`\`
+
+          After merging the PR, the release workflow will automatically create a GitHub release."
+
+          # Create the issue using GitHub CLI
+          issue_url=$(gh issue create --title "$TITLE" --body "$BODY")
+
+          # Try to add labels (won't fail if they don't exist)
+          gh issue edit "$issue_url" --add-label "automated" || echo "Label 'automated' not found, skipping"
+          gh issue edit "$issue_url" --add-label "version-bump" || echo "Label 'version-bump' not found, skipping"
+
+          echo "issue_url=$issue_url" >> $GITHUB_OUTPUT
+          echo "Created issue: $issue_url"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
