--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -109,6 +109,19 @@ jobs:
           cat package.json | jq ".version = \"$NEW_VERSION\"" > package.json.new
           mv package.json.new package.json
 
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Format package.json
+        run: |
+          # Format the package.json file to ensure it matches project style
+          bun prettier --write package.json
+
+          # Verify formatting was corrected
+          if ! bun prettier --check package.json; then
+            echo "Warning: package.json could not be formatted correctly"
+          fi
+
       - name: Create Branch and Push
         id: create-branch
         run: |
