--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,6 +16,9 @@ jobs:
   preview:
     name: Build and Deploy Preview
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,8 +38,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push image
         uses: docker/build-push-action@v6
@@ -48,6 +51,10 @@ jobs:
             ghcr.io/${{ github.repository }}/preview:sha-${{ steps.sha.outputs.short_sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.description=Preview build for PR #${{ steps.pr.outputs.number }}
+            org.opencontainers.image.licenses=MIT
 
       - name: Comment on PR
         uses: actions/github-script@v7
