Update auto-version workflow to create branch names following branch naming rules

--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -19,6 +19,11 @@ on:
           - minor
           - major
 
+# Prevent concurrent version bumps
+concurrency:
+  group: version-${{ github.run_id }}
+  cancel-in-progress: false
+
 jobs:
   auto-version:
     # Only run on merged PRs (not closed without merge)
