--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,11 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
+# Prevent redundant runs on the same PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+
 jobs:
   docker:
     name: Docker Image Build
@@ -43,6 +48,8 @@ jobs:
           echo "Using version: $VERSION"
 
       - name: Log in to Docker Hub
+        # Skip Docker Hub login for PR builds if you're only testing
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
@@ -70,16 +77,32 @@ jobs:
             # Only tag as latest on main/master branch non-PR builds
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' && github.event_name != 'pull_request' }}
 
-      - name: Build and push
+      # For PR builds - just build and test
+      - name: Build and test image (PR)
+        if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
         with:
-          # Use tags from the metadata action
+          context: .
+          push: false
+          load: true
+          tags: ${{ vars.DOCKER_USER }}/${{ vars.DOCKER_IMAGE_NAME || github.event.repository.name }}:pr-test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.description=Svelte 5 application template
+            org.opencontainers.image.licenses=MIT
+
+      # For push to main/master - build and push
+      - name: Build and push image (Production)
+        if: github.event_name != 'pull_request'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
-          # For pull requests, export results to the build cache.
-          # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
           cache-from: type=registry,ref=${{ vars.DOCKER_USER }}/${{ vars.DOCKER_IMAGE_NAME || github.event.repository.name }}:buildcache
-          cache-to: ${{ github.event_name != 'pull_request' && format('type=registry,ref={0}/{1}:buildcache,mode=max', vars.DOCKER_USER, vars.DOCKER_IMAGE_NAME || github.event.repository.name) || '' }}
+          cache-to: type=registry,ref=${{ vars.DOCKER_USER }}/${{ vars.DOCKER_IMAGE_NAME || github.event.repository.name }}:buildcache,mode=max
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=Svelte 5 application template
