--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write
       packages: write
     steps:
       - name: Checkout code
