--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,9 +47,8 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Using version: $VERSION"
 
+      # Docker login must happen BEFORE Buildx setup for cloud drivers
       - name: Log in to Docker Hub
-        # Skip Docker Hub login for PR builds if you're only testing
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
@@ -60,7 +59,6 @@ jobs:
         with:
           driver: cloud
           # Use a repository variable for the buildx endpoint
-          # If not set, this will need to be manually updated
           endpoint: ${{ vars.DOCKER_BUILDX_ENDPOINT }}
           install: true
 
