--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,7 +24,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
       packages: write
     steps:
       - name: Checkout code
@@ -38,8 +37,19 @@ jobs:
         id: pr
         run: echo "number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
 
+      # Docker login must happen BEFORE Buildx setup for cloud drivers
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PAT }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: cloud
+          endpoint: ${{ vars.DOCKER_BUILDX_ENDPOINT }}
+          install: true
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
