--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -25,6 +25,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
