Add Codecov bundler plugin

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
+		"@codecov/vite-plugin": "^1.9.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -24,6 +25,8 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/node": "^22.14.1",
+		"@vitest/coverage-v8": "^3.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
